# Coursework

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
LAB1/: LAB1.sln  sonar-project.properties
LAB1/LAB1/: LAB1.vcxproj  functions.cpp  functions.h  list_of_visitors_class.cpp  list_of_visitors_class.h  main.cpp  order_class.cpp  order_class.h  sonar-project.properties  visitor.cpp  visitor.h  visitor_class.cpp  visitor_class.h
LAB1/LAB1/x64/Debug/: LAB1.exe.recipe  LAB1.ilk  vc143.idb
LAB1/LAB1/x64/Debug/LAB1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LAB1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LAB1/cpp_files/: dishes.cpp  dishes_class.cpp  functions.cpp  list_of_orders_class.cpp  list_of_visitors_class.cpp  main.cpp  order_class.cpp  visitor_class.cpp
LAB1/header_files/: dishes.h  dishes_class.h  functions.h  list_of_orders_class.h  list_of_visitors_class.h  order_class.h  visitor_class.h
course work/: course work.sln
course work/course work/: course work.vcxproj  course work.vcxproj.filters  functions.cpp  functions.h  lab1.cpp  main.cpp  visitor.cpp  visitor.h
course work/course work/x64/Debug/: course work.exe.recipe  course work.ilk  vc143.idb
course work/course work/x64/Debug/course work.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  course work.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
